--- a/src/components/ShoppingCart/components/Product/Product.module.scss
+++ b/src/components/ShoppingCart/components/Product/Product.module.scss
@@ -1,15 +1,14 @@
 .Product {
-    padding: 30px 0;
-    display: flex;
-    justify-content: space-between;
-
-    .ProductImage, .Title, .Price, .Delete {
-        display: inline-block;
+    td {
+        padding: 0 0 85px;
     }
     .ProductImage {
         width: 72px;
         height: 72px;
         margin-right: 12px;
+        img {
+            width: 100%;
+        }
     }
     .Title {
         font-size: 20px;
