Order component - begin of implementation

--- a/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
+++ b/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
@@ -5,6 +5,7 @@
         font-weight: 100;
         font-size: 30px;
         margin-bottom: 30px;
+        text-align: center;
     }
     .Subcategories {
         display: flex;
