--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,6 +1,6 @@
 .Button {
     outline: none;
     border: none;
-    background-color: none;
+    background-color: transparent;
     cursor: pointer;
 }
