quick order fix

--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -19,4 +19,9 @@
     .DetailsWrp {
         width: 60%;
     }
+    .ModalProductPage {
+        > div {
+            z-index: 1000000000;
+        }
+    }
 }
