--- a/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
+++ b/src/components/CategoryMenu/components/Subcategories/Subcategories.module.scss
@@ -9,6 +9,11 @@
     }
     .Subcategories {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+        }
     }
 }
