products grid reworking

--- a/src/components/CategoryMenu/components/Subcategory/Subcategory.module.scss
+++ b/src/components/CategoryMenu/components/Subcategory/Subcategory.module.scss
@@ -8,7 +8,7 @@
     text-align: center;
     cursor: pointer;
 
-    &:hover {
+    &.Checked, &:hover {
         color: #ff0053;
         border-color: #ff0053;
     }
