--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,10 +1,13 @@
 .ProductsWrp {
-    column-count: 4;
-    column-gap: 1em;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
     padding: 0;
     min-height: 980px;
     position: relative;
     z-index: 10;
+    margin-top: 75px;
 
     @media only screen and (min-width: 1365px) {
         padding: 0 10vw;
