--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -1,41 +1,57 @@
 .Product {
-    display: inline-block;
     margin: 0 0 1.5em;
-    width: 100%;
-    box-shadow: 0 2px 14px 0 rgba(33,33,37,.2);
-    transition: box-shadow .35s ease-in,transform .3s ease-in,opacity .2s ease-in,-webkit-transform .3s ease-in;
+    padding: 0 15px;
     position: relative;
+    box-sizing: border-box;
 
-    .ByOneClick {
-        position: absolute;
-        top: 40%;
-        z-index: 10;
+    .TitleArea {
+        color: #555;
+        font-size: 19px;
+        padding: 15px 15px 0;
+        text-align: center;
+    }
 
-        &:hover {
-            color: #39f;
-        }
+    @media screen and (min-width: 768px) {
+        width: 50%;
+    }
+
+    @media screen and (min-width: 992px) {
+        width: 33%;
+    }
+
+    @media screen and (min-width: 1366px) {
+        width: 25%;
     }
 
     &:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 15px 20px rgba(0,0,0,.2);
 
         .ShoppingCart {
             display: block;
         }
     }
+    .ProductArea {
+        position: relative;
+        box-shadow: 0 2px 14px 0 rgba(33,33,37,.2);
+        transition: box-shadow .35s ease-in,transform .3s ease-in,opacity .2s ease-in,-webkit-transform .3s ease-in;
+        
+        > a {
+            display: block;
+            text-decoration: none;
+            color: inherit;
+        }
 
-    > a {
-        text-decoration: none;
-        color: inherit;
+        &:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 15px 20px rgba(0,0,0,.2);
+        }
     }
     .ShoppingCart {
         display: none;
         position: absolute;
         cursor: pointer;
         z-index: 10;
-        top: 20px;
-        right: 10px;
+        bottom: 85px;
+        right: 25px;
         padding: 16px;
         border-radius: 50%;
         border: none;
