--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -7,6 +7,8 @@
     }
     .GoToProducts {
         text-decoration: none;
+        display: block;
+        margin-bottom: 25px;
 
         &:hover {
             color: #ff115f;
@@ -27,18 +29,20 @@
     .ImageAreaWrp {
         width: 40%;
         vertical-align: top;
+        padding-right: 5%;
+        box-sizing: border-box;
 
-        @media screen and (min-width: 768px) {
-            padding: 25px 15px;
-            box-sizing: border-box;
-        }
+        // @media screen and (min-width: 768px) {
+        //     padding: 25px 15px;
+        //     box-sizing: border-box;
+        // }
 
-        > img {
-            display: block;
-            @media only screen and (max-width: 1200px) {
-                width: 100%;
-            }
-        }
+        // > img {
+        //     display: block;
+        //     @media only screen and (max-width: 1200px) {
+        //         width: 100%;
+        //     }
+        // }
     }
     .DetailsWrp {
         width: 60%;
@@ -48,4 +52,21 @@
             z-index: 1000000000;
         }
     }
+}
+
+.GoToOrderBtn {
+    text-decoration: none;
+    background-color: #1d9877;
+    border-radius: 5px;
+    color: #fff;
+    padding: 10px;
+    float: left;
+}
+.ContinueShoppingBtn {
+    background-color: #ddd;
+    border-radius: 5px;
+    color: #777;
+    font-size: 16px;
+    padding: 10px;
+    float: right;
 }
