--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -17,5 +17,13 @@
             justify-content: space-between;
             padding: 5px 0;
         }
+
+        .Description {
+            margin-top: 25px;
+            
+            .Key {
+                display: none;
+            }
+        }
     }
 }
