--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -15,13 +15,33 @@
     @media only screen and (max-width: 1365px) {
         padding: 0 2vw;
     }
-    @media only screen and (max-width: 1023px) and (min-width: 768px) {
-        column-count: 3;
-      }
-    @media only screen and (max-width: 767px) and (min-width: 540px) {
-        column-count: 2;
-    }
-    @media only screen and (max-width: 539px) {
-        column-count: 1;
+
+    .ProductPreloaderWrp {
+        margin: 0 0 1.5em;
+        padding: 0 15px;
+        position: relative;
+        box-sizing: border-box;
+        .ProductPreloader {
+            box-shadow: 0 2px 14px 0 rgba(33, 33, 37, 0.2);
+            width: 100%;
+            height: 85px;
+
+            .ProductPreloaderSpinner {
+                margin: 0% auto;
+                padding-top: 30px;
+            }
+        }
+
+        @media screen and (min-width: 768px) {
+            width: 50%;
+        }
+    
+        @media screen and (min-width: 992px) {
+            width: 33%;
+        }
+    
+        @media screen and (min-width: 1366px) {
+            width: 25%;
+        }
     }
 }
