--- a/src/components/ShoppingCart/components/Controls/Controls.module.scss
+++ b/src/components/ShoppingCart/components/Controls/Controls.module.scss
@@ -3,4 +3,8 @@
     justify-content: space-around;
     padding: 0 10px;
     box-sizing: border-box;
+
+    input {
+        text-align: center;
+    }
 }
