--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -3,6 +3,7 @@
     text-align: left;
 
     .ImageAreaWrp, .DetailsWrp {
+        min-height: calc(100vh - 340px);
         display: inline-block;
     }
     .GoToProducts {
