--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -1,7 +1,7 @@
 .SizesShoppingCart {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 25px;
+    padding-bottom: 35px;
     padding-top: 1em;
     border-bottom: 1px solid #dde3ea;
 
@@ -26,6 +26,7 @@
     .AddToCartArea .Price {
         font-size: 24px;
         padding-bottom: 20px;
+        text-align: right;
     }
     .AddToCartArea .AddToCart {
         font-size: 14px;
@@ -39,5 +40,14 @@
         background-color: #ff115f;
         cursor: pointer;
         outline: none;
+    }
+    .ByOneClick {
+        color: #555;
+        font-size: 19px;
+        margin-right: 25px;
+
+        &:hover {
+            color: #39f;
+        }
     }
 }
