--- a/src/components/CategoryMenu/CategoryMenu.module.scss
+++ b/src/components/CategoryMenu/CategoryMenu.module.scss
@@ -1,3 +1,10 @@
 .CategoryMenu {
     margin: 30px;
 }
+
+@media screen and (max-width: 767px) {
+    .CategoryMenu {
+        padding: 0 20px;
+        margin-top: 45px;
+    }
+}
