--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -3,7 +3,7 @@
     display: inline-block;
     color: #555;
 }
-.Services {
+.Services, .Phone {
     height: 100%;
     border-right: 1px solid #e5e9ee;
     padding: 0 10px;
@@ -12,8 +12,20 @@
     vertical-align: top;
     color: inherit;
     text-decoration: none;
+    margin-right: 20px;
 
     &:hover {
         color: #ff115f;
+    }
+}
+
+.Phone {
+    border-right: none;
+    padding-left: 30px;
+}
+
+@media screen and (max-width: 1250px) {
+    .Phone {
+        display: none;
     }
 }
