minor styles fix and currency api editing

--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -50,4 +50,19 @@
             color: #39f;
         }
     }
+    @media screen and (max-width: 767px) {
+        .AddToCartArea {
+            width: 100%;
+            .Price {
+                padding-bottom: 30px;
+            }
+            .ByOneClick {
+                float: left;
+                transform: translateY(5px);
+            }
+            .AddToCart {
+                float: right;
+            }
+        }
+    }
 }
