--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -32,18 +32,6 @@
         vertical-align: top;
         padding-right: 5%;
         box-sizing: border-box;
-
-        // @media screen and (min-width: 768px) {
-        //     padding: 25px 15px;
-        //     box-sizing: border-box;
-        // }
-
-        // > img {
-        //     display: block;
-        //     @media only screen and (max-width: 1200px) {
-        //         width: 100%;
-        //     }
-        // }
     }
     .DetailsWrp {
         width: 60%;
@@ -51,6 +39,13 @@
     .ModalProductPage {
         > div {
             z-index: 1000000000;
+        }
+    }
+
+    @media screen and (max-width: 767px) {
+        .ImageAreaWrp, .DetailsWrp {
+            display: block;
+            width: 100%;
         }
     }
 }
