--- a/src/components/ProductPage/components/Details/Details.module.scss
+++ b/src/components/ProductPage/components/Details/Details.module.scss
@@ -4,4 +4,9 @@
         padding-bottom: 20px;
         border-bottom: 1px solid #dde3ea;
     }
+    @media screen and (max-width: 767px) {
+        .Title {
+            margin-top: 0;
+        }
+    }
 }
