--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -26,4 +26,11 @@
             }
         }
     }
+    @media screen and (max-width: 767px) {
+        .KeyValueWrp:not(.Description) {
+            div:last-child {
+                font-weight: 700;
+            }
+        }
+    }
 }
