--- a/src/components/ContactPhone/ContactPhone.module.scss
+++ b/src/components/ContactPhone/ContactPhone.module.scss
@@ -15,3 +15,14 @@ a {
         opacity: .7;
     }
 }
+
+@media screen and (max-width: 767px) {
+    a {
+        position: relative;
+
+        .PhoneImg {
+            position: absolute;
+            top: -15px;
+        }
+    }
+}
