--- a/src/components/ProductPage/components/Contacts/Contacts.module.scss
+++ b/src/components/ProductPage/components/Contacts/Contacts.module.scss
@@ -20,3 +20,20 @@ h3 {
         margin-bottom: 10px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .ContactsArea {
+        display: block;
+        text-align: center;
+
+        .ContactItem {
+            display: inline-block;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+    h3 {
+        text-align: center;
+    }
+}
