--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,3 +32,10 @@
         }
     }
 }
+
+@media screen and (max-width: 400px) {
+    .Header {
+        font-size: 14px;
+        height: 89px;
+    }
+}
