--- a/src/components/CartButton/CartButton.module.scss
+++ b/src/components/CartButton/CartButton.module.scss
@@ -25,3 +25,9 @@
         border-radius: 10px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .CartButton {
+        right: 83px;
+    }
+}
