--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -23,6 +23,10 @@
         width: 25%;
     }
 
+    @media screen and (max-width: 767px) {
+        max-width: 340px;
+    }
+
     &:hover {
 
         .ShoppingCart {
