--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -15,6 +15,9 @@
     @media only screen and (max-width: 1365px) {
         padding: 0 2vw;
     }
+    @media screen and (max-width: 767px) {
+        justify-content: center;
+    }
 
     .ProductPreloaderWrp {
         margin: 0 0 1.5em;
