--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -3,6 +3,8 @@
     display: inline-block;
     vertical-align: top;
     position: relative;
+    padding-right: 20px;
+    box-sizing: border-box;
     
     .SearchIcon {
         width: 40px;
@@ -54,7 +56,7 @@
         }
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 830px) {
     .Search {
         margin-left: 15px;
         margin-bottom: 5px;
@@ -68,7 +70,7 @@
 @media screen and (max-width: 400px) {
     .Search {
         .Active {
-            width: 185px;
+            width: 175px;
         }
     }
 }
