--- a/src/components/ShoppingCart/components/ProductHeader/ProductHeader.module.scss
+++ b/src/components/ShoppingCart/components/ProductHeader/ProductHeader.module.scss
@@ -6,3 +6,8 @@
         text-align: center;
     }
 }
+@media screen and (max-width: 767px) {
+    .ProductHeader {
+        display: none;
+    }
+}
