--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,21 @@
   padding-top: 50px;
 }
 
+.SearchActive {
+  width: auto;
+}
+.NavbarPhoneNumber {
+  color: red;
+}
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 830px) {
   .AppWrapper {
     padding-top: 90px;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .SearchActive ~ .NavbarWrp .NavbarPhoneNumber {
+    display: none;
   }
 }
