--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -8,3 +8,9 @@
         padding: 0 0 10px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .CartWrp h2 {
+        margin-bottom: 0;
+    }
+}
