--- a/src/components/Cart/components/Product/Product.module.scss
+++ b/src/components/Cart/components/Product/Product.module.scss
@@ -48,7 +48,79 @@
             width: 20px;
         }
     }
+    @media screen and (max-width: 767px) {
+        font-size: 12px;
+        .Image {
+            width: 72px;
+            height: 72px;
+            margin-right: 12px;
+            border: none;
+            img {
+                width: 100%;
+            }
+        }
+        .NameWrp {
+            display: none;
+        }
+        .Price {
+            position: relative;
+            padding-top: 27px;
+            &::before {
+                content: '\426\435\43D\430';
+                position: absolute;
+                top: -5px;
+                font-size: 14px;
+            }
+        }
+        .Quantity {
+            position: relative;
+            width: 70px;
+            button {
+                display: none;
+            }
+            input {
+                margin-top: 25px;
+            }
+            &::before {
+                content: '\41A\43E\43B-\432\43E';
+                color: #888;
+                position: absolute;
+                top: -5px;
+                left: 9px;
+                font-size: 14px;
+                min-width: 50px;
+            }
+        }
+        .Total {
+            position: relative;
+            padding-top: 27px;
+            &::before {
+                content: '\421\443\43C\43C\430';
+                color: #888;
+                position: absolute;
+                top: -5px;
+                left: 0;
+                font-size: 14px;
+            }
+        }
+    }
 }
 .ProductWrpEven {
     background-color: #fafafa;
+}
+
+@media screen and (max-width: 767px) {
+    .NameWrpMobile {
+        font-size: 14px;
+        margin-top: 15px;
+    }
+    .ProductWrpEven {
+        background-color: transparent;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .NameWrpMobile {
+        display: none;
+    }
 }
