--- a/src/components/ShoppingCart/components/Product/Product.module.scss
+++ b/src/components/ShoppingCart/components/Product/Product.module.scss
@@ -110,6 +110,11 @@
 }
 
 @media screen and (max-width: 767px) {
+    .Product {
+        td {
+            padding-bottom: 35px;
+        }
+    }
     .Product:last-child {
         td {
             padding-bottom: 10px;
