--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -12,5 +12,8 @@
 @media screen and (max-width: 767px) {
     .CartWrp h2 {
         margin-bottom: 0;
+        margin-top: 65px;
+        text-align: center;
+        padding-bottom: 20px;
     }
 }
