--- a/src/components/Order/QuickOrderForm/QuickOrderForm.module.scss
+++ b/src/components/Order/QuickOrderForm/QuickOrderForm.module.scss
@@ -74,3 +74,10 @@
         }
     }
 }
+
+@media screen and (max-width: 767px) {
+    .Form {
+        padding: 0 25px;
+        box-sizing: border-box;
+    }   
+}
