--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -11,22 +11,6 @@
         text-align: center;
     }
 
-    @media screen and (min-width: 768px) {
-        width: 50%;
-    }
-
-    @media screen and (min-width: 992px) {
-        width: 33%;
-    }
-
-    @media screen and (min-width: 1366px) {
-        width: 25%;
-    }
-
-    @media screen and (max-width: 767px) {
-        max-width: 340px;
-    }
-
     &:hover {
 
         .ShoppingCart {
@@ -66,6 +50,25 @@
         &:hover {
             background-color: #000;
             color: #fff;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 50%;
+    }
+
+    @media screen and (min-width: 992px) {
+        width: 33%;
+    }
+
+    @media screen and (min-width: 1366px) {
+        width: 25%;
+    }
+
+    @media screen and (max-width: 767px) {
+        max-width: 340px;
+        .ShoppingCart {
+            z-index: -1;
         }
     }
 }
