--- a/src/components/Order/Order.module.scss
+++ b/src/components/Order/Order.module.scss
@@ -5,7 +5,7 @@
     .GoToProducts {
         text-decoration: none;
         display: block;
-        margin-bottom: 25px;
+        margin: 25px 0;
         position: absolute;
         top: 27px;
         left: 3%;
