--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -9,7 +9,7 @@
     .GoToProducts {
         text-decoration: none;
         display: block;
-        margin-bottom: 25px;
+        margin: 25px 0;
 
         &:hover {
             color: #ff115f;
