--- a/src/components/ShoppingCart/ShoppingCart.module.scss
+++ b/src/components/ShoppingCart/ShoppingCart.module.scss
@@ -31,7 +31,7 @@
     .GoToProducts {
         text-decoration: none;
         display: block;
-        margin-bottom: 25px;
+        margin: 25px 0;
         position: absolute;
         top: 40px;
         left: 3%;
