--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,6 +11,19 @@
     text-align: left;
     padding: 0 25px;
     box-shadow: 0 0 5px #ddd;
+    transition: transform 0.6s;
+
+    .PhonesWrp {
+        display: none;
+        position: relative;
+        left: -25px;
+        padding: 0 35px 5px;
+        font-size: 18px;
+        background-color: #fff;
+        .Phone:not(:last-child) {
+            padding-right: 20px;
+        }
+    }
 
     .HomeLink {
         display: inline-block;
@@ -30,6 +43,15 @@
             height: 32px;
             padding-top: 9px;
         }
+        .PhonesWrp {
+            display: block;
+        }
+    }
+    .Header.Visible {
+        transform: translateY(0);
+    }
+    .Header.Hidden {
+        transform: translateY(-200px);
     }
 }
 
