--- a/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
+++ b/src/components/Navbar/components/CatalogNav/CatalogNav.module.scss
@@ -39,6 +39,12 @@
     }
 }
 
+@media screen and (max-width: 830px) {
+    .Categories .CategList {
+        top: 55px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .Categories {
         height: auto;
