--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
     text-align: left;
     padding: 0 25px;
     box-shadow: 0 0 5px #ddd;
-    transition: transform 0.6s;
+    transition: transform 0.8s;
 
     .PhonesWrp {
         display: none;
@@ -19,9 +19,12 @@
         left: -25px;
         padding: 0 35px 5px;
         font-size: 18px;
-        background-color: #fff;
-        .Phone:not(:last-child) {
-            padding-right: 20px;
+        background-color: hsla(0, 0%, 100%, 0.95);
+        .Phone {
+            display: inline-block;
+            &:not(:last-child) {
+                padding-right: 20px;
+            }
         }
     }
 
@@ -51,7 +54,7 @@
         transform: translateY(0);
     }
     .Header.Hidden {
-        transform: translateY(-200px);
+        transform: translateY(-500px);
     }
 }
 
