--- a/src/components/ProductPage/ProductPage.module.scss
+++ b/src/components/ProductPage/ProductPage.module.scss
@@ -1,3 +1,11 @@
+.ModalProductPage {
+    > div {
+        z-index: 1000000000;
+        > div {
+            padding-bottom: 40px !important;
+        }
+    }
+}
 .ProductPage {
     padding: 15px 25px;
     text-align: left;
