--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -1,9 +1,21 @@
 .SizesShoppingCart {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 35px;
+    padding-bottom: 25px;
     padding-top: 1em;
     border-bottom: 1px solid #dde3ea;
+
+    .AvailibilityArea {
+        font-style: italic;
+        font-size: 18px;
+        padding: 15px 15px 0;
+        .Available {
+            color: #129300;
+        }
+        .NotAvailable {
+            color: #ff6000;
+        }
+    }
 
     .Sizes .Dimensions {
         font-weight: 100;
@@ -64,6 +76,9 @@
         }
     }
     @media screen and (max-width: 767px) {
+        .AvailibilityArea {
+            margin-top: 45px;
+        }
         .AddToCartArea {
             width: 100%;
             .Price {
