--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -47,6 +47,7 @@
     .AddToCartArea .PriceCrossed {
         margin-right: 25px;
         position: relative;
+        color: #777;
         &::before {
             content: '';
             position: absolute;
@@ -97,9 +98,15 @@
         transform: translateY(15px);
         margin-left: 20px;
     }
+    @media screen and (max-width: 600px) {
+        .CountDownArea {
+            margin-left: 0;
+        }
+    }
     @media screen and (max-width: 767px) {
         .AvailibilityArea {
-            margin-top: 45px;
+            margin-top: 35px;
+            padding-left: 0;
         }
         .AddToCartArea {
             width: 100%;
