--- a/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
+++ b/src/components/ProductPage/components/Details/components/Properties/Properties.module.scss
@@ -11,6 +11,7 @@
     }
     .PropertiesContent {
         padding: 15px 40px 0 0;
+        font-size: 18px;
 
         .KeyValueWrp {
             display: flex;
