--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,20 @@
   color: red;
 }
 
+/* .carousel.carousel-slider {
+  margin: 0 auto;
+  width: 1000px !important;
+} */
+
 @media screen and (max-width: 830px) {
   .AppWrapper {
-    padding-top: 90px;
+    padding-top: 135px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .carousel.carousel-slider {
+    /* width: 100% !important; */
   }
 }
 
