--- a/src/components/ProductPage/components/Details/Details.module.scss
+++ b/src/components/ProductPage/components/Details/Details.module.scss
@@ -7,6 +7,7 @@
     @media screen and (max-width: 767px) {
         .Title {
             margin-top: 0;
+            font-size: 21px;
         }
     }
 }
