--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -64,3 +64,13 @@
         height: 89px;
     }
 }
+
+@media screen and (max-width: 365px) {
+    .Header {
+        .PhonesWrp {
+            .Phone {
+                font-size: 17px;
+            }
+        }
+    }
+}
