--- a/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
+++ b/src/components/ProductPage/components/Details/components/SizesShoppingCart/SizesShoppingCart.module.scss
@@ -122,4 +122,15 @@
             }
         }
     }
+    @media screen and (max-width: 365px) {
+        .AddToCartArea {
+            .ByOneClick {
+                padding: 0 20px;
+                margin-right: 15px;
+            }
+            .AddToCart {
+                padding: 0 25px;
+            }
+        }
+    }
 }
